<resources>
    <string name="app_name">HabitsTracker</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="tab1">Tab1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>